--- a/Frontend/css/style1.css
+++ b/Frontend/css/style1.css
@@ -1,10 +1,10 @@
 .gif{
-  height: 500px;
-  width: 500px
+  height: 128px;
+  width: 128px
  }
  body{
 
-  background-image: url("cVgFXd.jpg");
+  background-image: url("../img/cVgFXd.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   height: 100%;
