--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -8,17 +8,17 @@
   <meta content="" name="description">
 
   <!-- Bootstrap CSS File -->
-  <link href="../static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
-  <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="../static/lib/animate/animate.min.css" rel="stylesheet">
-  <link href="../static/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="../static/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="../static/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="../static/css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <style>
 body{
@@ -151,19 +151,19 @@ h1,h2,h3{
   <div id="preloader"></div>
 
   <!-- JavaScript Libraries -->
-  <script src="../static/lib/jquery/jquery.min.js"></script>
-  <script src="../static/../static/../static/../static/../static/../static/../static/../static/../static/lib/jquery/jquery-migrate.min.js"></script>
-  <script src="../static/../static/../static/../static/../static/../static/../static/../static/lib/popper/popper.min.js"></script>
-  <script src="../static/../static/../static/../static/../static/../static/../static/lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="../static/../static/../static/../static/../static/../static/lib/easing/easing.min.js"></script>
-  <script src="../static/../static/../static/../static/../static/lib/counterup/jquery.waypoints.min.js"></script>
-  <script src="../static/../static/../static/../static/lib/counterup/jquery.counterup.js"></script>
-  <script src="../static/../static/../static/lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="../static/../static/lib/lightbox/js/lightbox.min.js"></script>
-  <script src="../static/lib/typed/typed.min.js"></script>
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/jquery/jquery-migrate.min.js"></script>
+  <script src="lib/popper/popper.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="lib/easing/easing.min.js"></script>
+  <script src="lib/counterup/jquery.waypoints.min.js"></script>
+  <script src="lib/counterup/jquery.counterup.js"></script>
+  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="lib/lightbox/js/lightbox.min.js"></script>
+  <script src="lib/typed/typed.min.js"></script>
   <!-- Contact Form JavaScript File -->
 
   <!-- Template Main Javascript File -->
-  <script src="../static/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
