--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -21,8 +21,8 @@ body{
 .center{
 	color: white;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	 text-align: center;
-	 font-size: 40px;
+	text-align: center;
+	font-size: 40px;
 }
 .button {
   background-color: #555555; /* Green */
@@ -73,22 +73,35 @@ li a:hover {
 div {
   height: 400px;
   width: 100%;
+  position: center;
 }
 .text{
   color: white;
   }
+  .gif{
+  	width: 10%;
+    object-position: center;
+  }
+  .main{
+  	font-family: "Trebuchet MS", Helvetica, sans-serif;
+  	font-size: 15px
+  }
 </style>
 <body>
 	<ul>
-	<li><a class="active" href="index.html">Home</a></li>
+	<li><a class="active main" href="index.html"><b>MediCure AI</b></a></li>
 	<li><a href="blog.html">Our Blogs</a></li>
 	<li><a href="#about">About</a></li>
 	<li><a href="https://forms.gle/ZMKHwDrNH3FNek6d6">Feedback</a></li>
 	<li><a href="#">Download Android App</a></li>
+	<br>
 	</ul>
    	<div>
-   	<img src="../static/images/heart.gif" align="center">
+   		&nbsp;
+   	<center><img src="../static/images/heart.gif" class="gif"></center>
+   	<center>
    	 <h1 class="center">An AI Application for Medical Image Analysis</h1>
+   	</center>
    </div>
    	<br>
    	<center>
