--- a/WebApp/templates/index1.html
+++ b/WebApp/templates/index1.html
@@ -22,7 +22,7 @@
 </head>
 <style>
 body{
-  background-image: url("../static/images/intro-bg.jpg");
+  background-image: url("img/intro-bg.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   height: 100%;
