About page update

--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -91,7 +91,7 @@ div {
 	<ul>
 	<li><a class="active main" href="index.html"><b>MediCure AI</b></a></li>
 	<li><a href="blog.html">Our Blogs</a></li>
-	<li><a href="#about">About</a></li>
+	<li><a href="about.html">About</a></li>
 	<li><a href="https://forms.gle/ZMKHwDrNH3FNek6d6">Feedback</a></li>
 	<li><a href="#">Download Android App</a></li>
 	<br>
