Changes to index.html

--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -105,8 +105,9 @@ div {
    </div>
    	<br>
    	<center>
-   	<a href="checkup.html"><button class="button button5">Enter the App</button></a>
-   	<br><br><br><br><br><br>
+   	<a href="checkup.html"><button class="button button5"><b>Enter the Application</b></button></a>
+    <br><br><br><br><br><br>
+    <br><br><br><br><br><br>
    	<p class="copyright text">&copy; Credits <strong>Deep Learning & Deployment - <a class="text" href="https://github.com/saugatapaul1010">Saugata Paul</a></strong><br><strong>User Interface - <a class="text" href="https://github.com/suvhradipghosh07">Suvhradip Ghosh</a></strong>.<br>All Rights Reserved</p>
    </center>
 </body>
