Update Link location

--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -93,7 +93,7 @@ div {
 	<li><a href="blog.html">Our Blogs</a></li>
 	<li><a href="about.html">About</a></li>
 	<li><a href="https://forms.gle/ZMKHwDrNH3FNek6d6">Feedback</a></li>
-	<li><a href="#">Download Android App</a></li>
+	<li><a href="https://github.com/saugatapaul1010/Medical-AI-Android/raw/master/MediCure%20AI.apk">Download Android App</a></li>
 	<br>
 	</ul>
    	<div>
