--- a/WebApp/static/css/style1.css
+++ b/WebApp/static/css/style1.css
@@ -6,7 +6,7 @@
  }
  body{
 
-  background-image: url("../images/cVgFXd.jpg");
+  background-image: url("../img/cVgFXd.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   height: 100%;
